Allow reflective access in tests.